--- a/.github/workflows/ruby_docker-image.yml
+++ b/.github/workflows/ruby_docker-image.yml
@@ -23,4 +23,4 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD      
     - name: Docker Push
-      run: docker push $DOCKER_USER/ruby_rails:$(date +%s)
+      run: docker push sumosd/ruby_rails
