--- a/.github/workflows/ruby_docker-image.yml
+++ b/.github/workflows/ruby_docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ruby_rails:$(date +%s)
+      run: docker build . --file Dockerfile --tag ruby_rails
     - uses: actions/checkout@v2
     - name: docker login
       env:
